# esp_ghota

./: .gitignore  API.md  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml  library.json
.github/: FUNDING.yml
.github/workflows/: component.yml  main.yml
docs/: Doxyfile  changelog.rst  conf.py  index.rst  requirements.txt
docs/api/: ghota.rst  semver.rst
examples/esp_ghota_example/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
examples/esp_ghota_example/main/: CMakeLists.txt  idf_component.yml  main.c
examples/esp_ghota_example/spiffs/: test.txt
include/: esp_ghota.h
src/: esp_ghota.c  lwjson.c  lwjson.h  lwjson_debug.c  lwjson_opt.h  lwjson_stream.c  semver.c
